proj3-parser-jessieM4664/target/generated-sources/javacc/compilers/RamParser.java
/* RamParser.java */
/* Generated By:JavaCC: Do not edit this line. RamParser.java */
    package compilers;
    import java.io.FileNotFoundException;

    public class RamParser implements RamParserConstants {
        public static void main(String[] args)
        throws ParseException, TokenMgrError, FileNotFoundException
        {
            if (args.length == 0) {
                RamParser parser = new RamParser( System.in ) ;
                parser.Goal();
            } else {
                java.io.InputStream is = new java.io.FileInputStream(new java.io.File(args[0]));
                RamParser parser = new RamParser( is ) ;
                parser.Goal();
            }
        }

// The following is a simple grammar that will allow you
// to test the generated parser.
  final public void Goal() throws ParseException {
    Program();
    jj_consume_token(0);
}

  final public void RamToken() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CLASS:{
      jj_consume_token(CLASS);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    case LBRACE:{
      jj_consume_token(LBRACE);
      break;
      }
    case PUBLIC:{
      jj_consume_token(PUBLIC);
      break;
      }
    case STATIC:{
      jj_consume_token(STATIC);
      break;
      }
    case VOID:{
      jj_consume_token(VOID);
      break;
      }
    case MAIN:{
      jj_consume_token(MAIN);
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      break;
      }
    case STRING:{
      jj_consume_token(STRING);
      break;
      }
    case LSQPAREN:{
      jj_consume_token(LSQPAREN);
      break;
      }
    case RSQPAREN:{
      jj_consume_token(RSQPAREN);
      break;
      }
    case RPAREN:{
      jj_consume_token(RPAREN);
      break;
      }
    case RBRACE:{
      jj_consume_token(RBRACE);
      break;
      }
    case PLUSEQUALS:{
      jj_consume_token(PLUSEQUALS);
      break;
      }
    case MINUSEQUALS:{
      jj_consume_token(MINUSEQUALS);
      break;
      }
    case SEMICOLON:{
      jj_consume_token(SEMICOLON);
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      break;
      }
    case COMMA:{
      jj_consume_token(COMMA);
      break;
      }
    case INTEGER:{
      jj_consume_token(INTEGER);
      break;
      }
    case BOOLEAN:{
      jj_consume_token(BOOLEAN);
      break;
      }
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      break;
      }
    case IF:{
      jj_consume_token(IF);
      break;
      }
    case ELSE:{
      jj_consume_token(ELSE);
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      break;
      }
    case COLON:{
      jj_consume_token(COLON);
      break;
      }
    case PRINT:{
      jj_consume_token(PRINT);
      break;
      }
    case PRINTLN:{
      jj_consume_token(PRINTLN);
      break;
      }
    case AND:{
      jj_consume_token(AND);
      break;
      }
    case OR:{
      jj_consume_token(OR);
      break;
      }
    case LESSTHAN:{
      jj_consume_token(LESSTHAN);
      break;
      }
    case EQUALITY:{
      jj_consume_token(EQUALITY);
      break;
      }
    case PLUS:{
      jj_consume_token(PLUS);
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
      break;
      }
    case TIMES:{
      jj_consume_token(TIMES);
      break;
      }
    case DOT:{
      jj_consume_token(DOT);
      break;
      }
    case LENGTH:{
      jj_consume_token(LENGTH);
      break;
      }
    case INTEGER_LITERAL:{
      jj_consume_token(INTEGER_LITERAL);
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
      break;
      }
    case THIS:{
      jj_consume_token(THIS);
      break;
      }
    case NEW:{
      jj_consume_token(NEW);
      break;
      }
    case EXCLAMATION:{
      jj_consume_token(EXCLAMATION);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void Program() throws ParseException {
    MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      ClassDeclaration();
    }
}

  final public void MainClass() throws ParseException {
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_2;
      }
      VariableDeclaration();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case PRINTLN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      Statement();
    }
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
}

  final public void ClassDeclaration() throws ParseException {
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      VariableDeclaration();
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_5;
      }
      MethodDeclaration();
    }
    jj_consume_token(RBRACE);
}

  final public void VariableDeclaration() throws ParseException {
    Type();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(SEMICOLON);
}

  final public void MethodDeclaration() throws ParseException {
    jj_consume_token(PUBLIC);
    Type();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
    FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      VariableDeclaration();
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case PRINTLN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_7;
      }
      Statement();
    }
    jj_consume_token(RETURN);
    Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
}

  final public void FormalList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER:{
      Type();
      jj_consume_token(IDENTIFIER);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_8;
        }
        FormalRest();
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
}

  final public void FormalRest() throws ParseException {
    jj_consume_token(COMMA);
    Type();
    jj_consume_token(IDENTIFIER);
}

  final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER:{
      jj_consume_token(INTEGER);
      TypePrime();
      break;
      }
    case BOOLEAN:{
      jj_consume_token(BOOLEAN);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void TypePrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LSQPAREN:{
      jj_consume_token(LSQPAREN);
      jj_consume_token(RSQPAREN);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
}

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      jj_consume_token(LBRACE);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACE:
        case IF:
        case WHILE:
        case PRINT:
        case PRINTLN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_9;
        }
        Statement();
      }
      jj_consume_token(RBRACE);
      break;
      }
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      Statement();
      jj_consume_token(ELSE);
      Statement();
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      Statement();
      break;
      }
    case PRINT:{
      jj_consume_token(PRINT);
      jj_consume_token(LPAREN);
      ExpressionList();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
      break;
      }
    case PRINTLN:{
      jj_consume_token(PRINTLN);
      jj_consume_token(LPAREN);
      ExpressionList();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      StatementPrime();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void StatementPrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      Expression();
      jj_consume_token(SEMICOLON);
      break;
      }
    case PLUSEQUALS:{
      jj_consume_token(PLUSEQUALS);
      Expression();
      jj_consume_token(SEMICOLON);
      break;
      }
    case LSQPAREN:{
      jj_consume_token(LSQPAREN);
      Expression();
      jj_consume_token(RSQPAREN);
      jj_consume_token(ASSIGN);
      Expression();
      jj_consume_token(SEMICOLON);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void Expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:{
      jj_consume_token(INTEGER_LITERAL);
      ExpressionPrime();
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
      ExpressionPrime();
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
      ExpressionPrime();
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      ExpressionPrime();
      break;
      }
    case THIS:{
      jj_consume_token(THIS);
      ExpressionPrime();
      break;
      }
    case NEW:{
      jj_consume_token(NEW);
      ExpressionDoublePrime();
      ExpressionPrime();
      break;
      }
    case EXCLAMATION:{
      jj_consume_token(EXCLAMATION);
      Expression();
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      ExpressionPrime();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void ExpressionPrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LSQPAREN:
    case DOT:
    case LESSTHAN:
    case EQUALITY:
    case PLUS:
    case MINUS:
    case TIMES:
    case AND:
    case OR:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LESSTHAN:
      case EQUALITY:
      case PLUS:
      case MINUS:
      case TIMES:
      case AND:
      case OR:{
        Operator();
        Expression();
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        if (jj_2_3(3)) {
          jj_consume_token(LSQPAREN);
          Expression();
          jj_consume_token(RSQPAREN);
        } else if (jj_2_4(2)) {
          jj_consume_token(LSQPAREN);
          Expression();
          jj_consume_token(COLON);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LPAREN:
          case EXCLAMATION:
          case FALSE:
          case NEW:
          case THIS:
          case TRUE:
          case INTEGER_LITERAL:
          case IDENTIFIER:{
            Expression();
            break;
            }
          default:
            jj_la1[14] = jj_gen;
            ;
          }
          jj_consume_token(RSQPAREN);
        } else if (jj_2_5(2)) {
          jj_consume_token(LSQPAREN);
          Expression();
          jj_consume_token(COLON);
          jj_consume_token(RSQPAREN);
        } else if (jj_2_6(2)) {
          jj_consume_token(LSQPAREN);
          jj_consume_token(COLON);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LPAREN:
          case EXCLAMATION:
          case FALSE:
          case NEW:
          case THIS:
          case TRUE:
          case INTEGER_LITERAL:
          case IDENTIFIER:{
            Expression();
            break;
            }
          default:
            jj_la1[15] = jj_gen;
            ;
          }
          jj_consume_token(RSQPAREN);
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case DOT:{
            jj_consume_token(DOT);
            ExpressionTriplePrime();
            break;
            }
          default:
            jj_la1[17] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
}

  final public void ExpressionDoublePrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER:{
      jj_consume_token(INTEGER);
      jj_consume_token(LSQPAREN);
      Expression();
      jj_consume_token(RSQPAREN);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LPAREN);
      jj_consume_token(RPAREN);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void ExpressionTriplePrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LENGTH:{
      jj_consume_token(LENGTH);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LPAREN);
      ExpressionList();
      jj_consume_token(RPAREN);
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void ExpressionList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LPAREN:
    case EXCLAMATION:
    case FALSE:
    case NEW:
    case THIS:
    case TRUE:
    case INTEGER_LITERAL:
    case IDENTIFIER:{
      Expression();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[21] = jj_gen;
          break label_10;
        }
        ExpressionRest();
      }
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      ;
    }
}

  final public void ExpressionRest() throws ParseException {
    jj_consume_token(COMMA);
    Expression();
}

  final public void Operator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AND:{
      jj_consume_token(AND);
      break;
      }
    case OR:{
      jj_consume_token(OR);
      break;
      }
    case LESSTHAN:{
      jj_consume_token(LESSTHAN);
      break;
      }
    case EQUALITY:{
      jj_consume_token(EQUALITY);
      break;
      }
    case PLUS:{
      jj_consume_token(PLUS);
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
      break;
      }
    case TIMES:{
      jj_consume_token(TIMES);
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_3R_TypePrime_229_5_25()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_TypePrime_229_7_29()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_scan_token(LSQPAREN)) return true;
    if (jj_3R_Expression_254_5_12()) return true;
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_scan_token(LSQPAREN)) return true;
    if (jj_3R_Expression_254_5_12()) return true;
    if (jj_scan_token(RSQPAREN)) return true;
    return false;
  }

  private boolean jj_3R_ExpressionPrime_268_9_30()
 {
    if (jj_3R_Operator_306_5_32()) return true;
    return false;
  }

  private boolean jj_3R_ExpressionPrime_268_9_26()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_ExpressionPrime_268_9_30()) {
    jj_scanpos = xsp;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3R_ExpressionPrime_273_11_31()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_Type_221_5_22()
 {
    if (jj_scan_token(INTEGER)) return true;
    if (jj_3R_TypePrime_229_5_25()) return true;
    return false;
  }

  private boolean jj_3R_Type_221_5_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_Type_221_5_22()) {
    jj_scanpos = xsp;
    if (jj_scan_token(30)) {
    jj_scanpos = xsp;
    if (jj_scan_token(50)) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_ExpressionPrime_267_5_23()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_ExpressionPrime_268_9_26()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3R_Expression_261_7_21()
 {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_Expression_254_5_12()) return true;
    return false;
  }

  private boolean jj_3R_Expression_260_7_20()
 {
    if (jj_scan_token(EXCLAMATION)) return true;
    if (jj_3R_Expression_254_5_12()) return true;
    return false;
  }

  private boolean jj_3R_Expression_259_7_19()
 {
    if (jj_scan_token(NEW)) return true;
    if (jj_3R_ExpressionDoublePrime_280_5_24()) return true;
    return false;
  }

  private boolean jj_3R_Expression_258_7_18()
 {
    if (jj_scan_token(THIS)) return true;
    if (jj_3R_ExpressionPrime_267_5_23()) return true;
    return false;
  }

  private boolean jj_3R_Operator_306_5_32()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(27)) {
    jj_scanpos = xsp;
    if (jj_scan_token(28)) {
    jj_scanpos = xsp;
    if (jj_scan_token(20)) {
    jj_scanpos = xsp;
    if (jj_scan_token(21)) {
    jj_scanpos = xsp;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(25)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_Expression_257_7_17()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_3R_ExpressionPrime_267_5_23()) return true;
    return false;
  }

  private boolean jj_3R_Expression_256_7_16()
 {
    if (jj_scan_token(FALSE)) return true;
    if (jj_3R_ExpressionPrime_267_5_23()) return true;
    return false;
  }

  private boolean jj_3R_Expression_255_7_15()
 {
    if (jj_scan_token(TRUE)) return true;
    if (jj_3R_ExpressionPrime_267_5_23()) return true;
    return false;
  }

  private boolean jj_3R_Expression_254_5_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_Expression_254_5_14()) {
    jj_scanpos = xsp;
    if (jj_3R_Expression_255_7_15()) {
    jj_scanpos = xsp;
    if (jj_3R_Expression_256_7_16()) {
    jj_scanpos = xsp;
    if (jj_3R_Expression_257_7_17()) {
    jj_scanpos = xsp;
    if (jj_3R_Expression_258_7_18()) {
    jj_scanpos = xsp;
    if (jj_3R_Expression_259_7_19()) {
    jj_scanpos = xsp;
    if (jj_3R_Expression_260_7_20()) {
    jj_scanpos = xsp;
    if (jj_3R_Expression_261_7_21()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_Expression_254_5_14()
 {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    if (jj_3R_ExpressionPrime_267_5_23()) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_3R_VariableDeclaration_193_5_11()) return true;
    return false;
  }

  private boolean jj_3R_VariableDeclaration_193_5_11()
 {
    if (jj_3R_Type_221_5_13()) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3R_ExpressionDoublePrime_281_7_28()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3R_ExpressionDoublePrime_280_5_27()
 {
    if (jj_scan_token(INTEGER)) return true;
    return false;
  }

  private boolean jj_3R_ExpressionDoublePrime_280_5_24()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_ExpressionDoublePrime_280_5_27()) {
    jj_scanpos = xsp;
    if (jj_3R_ExpressionDoublePrime_281_7_28()) return true;
    }
    return false;
  }
